Fix the L<> mess I made last night

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -6,9 +6,9 @@
 
 =head1 Abstract Class
 
-The generic Computer Science term "abstract L</Class|class>" defines the
-L</Interface|interface> or L</API> of a class.  In Perl 6, this is
-implemented using L</Role|roles> with L</Stub|stubbed> methods.
+The generic Computer Science term "abstract L<class|Class>" defines the
+L<interface|Interface> or L<API> of a class.  In Perl 6, this is
+implemented using L<roles|Role> with L<stubbed|Stub> methods.
 
     role Canine {
         method bark { ... }          # the ... indicates a stub
@@ -46,7 +46,7 @@ followed by a name (for the key):
 
     :20seconds     # same as seconds => 20
 
-Also see L</Colon Pair and Colon List>.
+Also see L<Colon Pair and Colon List>.
 
 =head1 Anonymous
 
@@ -68,13 +68,13 @@ Note that it is still allowed to have a name
 
 =head1 Any
 
-The L</Class|class> from which most things derive (inherit), except for
-L</Junction|junctions>.  C<Any> itself derives from L</Mu>.
+The L<class|Class> from which most things derive (inherit), except for
+L<junctions|Junction>.  C<Any> itself derives from L<Mu>.
 
 =head1 any()
 
-A function generating a L</Junction|junction> with "or" semantics (aka,
-L</True> if any of its values are C<True>.
+A function generating a L<junction|Junction> with "or" semantics (aka,
+L<True> if any of its values are C<True>.
 
 =head1 API
 
@@ -86,32 +86,32 @@ See also L<Abstract Class>.
 
 =head1 Apocalypse
 
-A document originally written by L</TimToady>, in which he processed the
+A document originally written by L<TimToady>, in which he processed the
 initial barrage of RFC's that came out of the Perl community.  Now only kept
-as an historical document for reference.  See also L</Exegesis> and
-L</Synopsis>.
+as an historical document for reference.  See also L<Exegesis> and
+L<Synopsis>.
 
 =head1 Arity
 
-The number of L</Positional|positional> operands expected by an
-L</Operator|operator>, L</Subroutine|subroutine>, L</Method|method> or
-L</Callable|callable block>.
+The number of L<positional|Positional> operands expected by an
+L<operator|Operator>, L<subroutine|Subroutine>, L<method|Method> or
+L<callable block|Callable>.
 
     sub infix:<+>(Foo $a, Foo $b) { $a.Int + $b.Int }  # arity of "+" is 2
     sub frobnicate($x) { ... }                         # arity of 1
     sub the-answer() { 42 }                            # arity of 0
     -> $key, $value { ... }                            # arity of 2
 
-The arity of a C</Callable> is one of the main selectors in
-L</Multi-Dispatch|multi-dispatch>.
+The arity of a C<Callable> is one of the main selectors in
+L<multi-dispatch|Multi-Dispatch>.
 
 =head1 Attribute
 
 A per-object storage slot.  Other programming languages refer to this as
-C<Field>, C<Member>, C<Slot> or C<Property>.
+L<Field>, L<Member>, L<Slot> or L<Property>.
 
-In Perl 6, attributes are defined with the L</has> keyword inside a
-L</Class|class>:
+In Perl 6, attributes are defined with the L<has> keyword inside a
+L<class|Class>:
 
     class Dog {
         has $.name;    # public attribute "name"
@@ -119,11 +119,11 @@ L</Class|class>:
 
 =head1 Autothreading
 
-Autothreading is what happens if you pass a L</type/Junction|Junction> to
+Autothreading is what happens if you pass a L<Junction|/type/Junction> to
 a subroutine that expects a parameter of type C<Any> or a subtype thereof
-(such as anything L</Cool>). The call is then executed for each value of
-the junction. The result of these calls is assembled in a new junction of
-the same type as the original junction.
+(such as anything L<Cool|/type/Cool>). The call is then executed for each
+value of the junction. The result of these calls is assembled in a new
+junction of the same type as the original junction.
 
     sub f($x) { 2 * $x };
     say f(1|2|3) == 4;    # any(False,True,False)
@@ -175,7 +175,7 @@ with the appropriate sigil:
     :%mapper       # same as mapper => %mapper
     :&test         # same as test => &test
 
-See also L</Adverb>.
+See also L<Adverb>.
 
 =head1 Constraint
 
@@ -191,7 +191,7 @@ The C<Str> in the above example is also a constraint, but is usually
 referred to as a "type constraint."
 
 Note that you can elso differentiate candidates in a
-L</Multi-Dispatch|multi-dispatch> by using a different constraint:
+L<multi-dispatch|Multi-Dispatch> by using a different constraint:
 
     multi sub abbreviate(Str $thing where { .chars >= 10 }) {
         "$thing.substr(0,10)..."
@@ -203,7 +203,7 @@ L</Multi-Dispatch|multi-dispatch> by using a different constraint:
 
 =head1 Field
 
-See L</Attribute>.
+See L<Attribute>.
 
 =head1 Instance
 
@@ -233,14 +233,14 @@ C<defined($instance)> is C<True>.
 To put things another way, a class contains the blueprints of methods and
 attributes, and an instance carries it into the real world.
 
-=head2 IRC
+=head1 IRC
 
 Internet Relay Chat.  Perl 6 developers and users usually hang out on the
-C<#perl6> channel of L</Freenode|irc.freenode.org>.
+C<#perl6> channel of C<irc.freenode.org>.
 
 =head1 IRC Lingo
 
-The following terms are often used on the Perl 6 related L</IRC> channels:
+The following terms are often used on the Perl 6 related L<IRC> channels:
 
 =head2 AFAICS
 
@@ -269,20 +269,20 @@ know, and I don't care.
 
 =head2 backlog
 
-That part of a discussion on an L</IRC> channel that you've missed.  If it
+That part of a discussion on an L<IRC> channel that you've missed.  If it
 is not or no longer available in your IRC client, you can go to sites such
 as L<http://irc.perl6.org> to see what has been logged for you.
 
 =head2 BIAB
 
-Back In A Bit.  As in, only L</AFK|afk> for a little while.
+Back In A Bit.  As in, only L<afk|AFK> for a little while.
 
 =head2 Bot
 
-A program that does automatic tasks on one or more L</IRC> channels by
+A program that does automatic tasks on one or more L<IRC> channels by
 acting like a regular user (as far as the IRC server is concerned) and
 performing some tasks that may involve answering to users requests.
-Examples are L</Camelia|camelia>, L</Dalek|dalek> and L</Yoleaux|yoleaux>.
+Examples are L<camelia>, L<dalek> and L<yoleaux>.
 
 =head2 BRB
 
@@ -371,8 +371,8 @@ No Such Thing
 
 =head2 Opt
 
-Short for "optimization", usually in either the context of L</spesh> or
-L</JIT>.
+Short for "optimization", usually in either the context of L<spesh> or
+L<JIT>.
 
 =head2 PB
 
@@ -385,7 +385,7 @@ when programming Perl 5.
 
 =head2 PR
 
-Pull Request.  A feature of L<Github|https://gitub.com> that allows you to
+Pull Request.  A feature of L<https://gitub.com|Github> that allows you to
 make patches to be easily applied using the Github user interface.
 
 =head2 P5
@@ -403,11 +403,11 @@ Real Soon Now
 =head2 RT
 
 Request Tracker (L<http://rt.perl.org/>).  The place where all the bugs
-related to L</Rakudo> live.
+related to L<Rakudo> live.
 
 =head2 TIMTOWTDI
 
-An alternative form of L</TMTOWTDI>, explicitly including the "is" from
+An alternative form of L<TMTOWTDI>, explicitly including the "is" from
 the contraction "There's".
 
 =head2 TMI
@@ -436,7 +436,7 @@ Wikipedia
 
 =head2 WW
 
-Short for C<wrong window>.  When on L</IRC>, someone types something in a
+Short for C<wrong window>.  When on L<IRC>, someone types something in a
 channel that was intended for another channel, or for a private message.
 
 =head1 Invocant
@@ -502,15 +502,15 @@ pre-compiled file).
 
 =head1 Member
 
-See L</Attribute>.
+See L<Attribute>.
 
 =head1 Property
 
-See L</Attribute>.
+See L<Attribute>.
 
 =head1 Slot
 
-See L</Attribute>.
+See L<Attribute>.
 
 =head1 Slurpy
 
