Another round of link fixes

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -6,9 +6,9 @@
 
 =head1 Abstract Class
 
-The generic Computer Science term "abstract L<class|Class>" defines the
-L<interface|Interface> or L<API> of a class.  In Perl 6, this is
-implemented using L<roles|Role> with L<stubbed|Stub> methods.
+The generic Computer Science term "abstract L<class|#Class>" defines the
+L<interface|#Interface> or L<#API> of a class.  In Perl 6, this is
+implemented using L<roles|#Role> with L<stubbed|#Stub> methods.
 
     role Canine {
         method bark { ... }          # the ... indicates a stub
@@ -48,11 +48,11 @@ followed by a name (for the key):
 
     :20seconds     # same as seconds => 20
 
-Also see L<Colon Pair and Colon List>.
+Also see L<#Colon Pair and Colon List>.
 
 =head1 Adverbial Pair
 
-A generalized form of L</pair notation>.  They all start with the colon, like:
+A generalized form of C<pair notation>.  They all start with the colon, like:
 
   adverbial pair  | pair notation
   ================|==============
@@ -63,7 +63,7 @@ A generalized form of L</pair notation>.  They all start with the colon, like:
     :foo          | foo => True
     :!foo         | foo => False
 
-Also see L</Adverb> and L</Colon Pair and Colon List>.
+Also see L<#Adverb> and L<#Colon Pair and Colon List>.
 
 =head1 Anonymous
 
@@ -86,13 +86,13 @@ that name:
 
 =head1 Any
 
-The L<class|Class> from which most things derive (inherit), except for
-L<junctions|Junction>.  C<Any> itself derives from L<Mu>.
+The L<class|#Class> from which most things derive (inherit), except for
+L<junctions|#Junction>.  C<Any> itself derives from L<#Mu>.
 
 =head1 any()
 
-A function generating a L<junction|Junction> with "or" semantics (aka,
-L<True> if any of its values are C<True>.
+A function generating a L<junction|#Junction> with "or" semantics (aka,
+L<#True> if any of its values are C<True>.
 
 =head1 API
 
@@ -100,19 +100,19 @@ Application Programming Interface. Ideally, someone using your system or
 library should be able to do so with knowledge only of the API, but not
 necessarily knowing anything about the internals or implementation.
 
-See also L<Abstract Class>.
+See also L<#Abstract Class>.
 
 =head1 Apocalypse
 
-A document originally written by L<TimToady>, in which he processed the
+A document originally written by L<#TimToady>, in which he processed the
 initial barrage of RFC's that came out of the Perl community.  Now only kept
-as an historical document for reference.  See also L<Exegesis> and
-L<Synopsis>.
+as an historical document for reference.  See also L<#Exegesis> and
+L<#Synopsis>.
 
 =head1 Argument
 
-A value that you pass on to a L<subroutine|Subroutine>, L<method|Method>
-or a L<callable block|Callable>.  As opposed to the L<Parameter> that is
+A value that you pass on to a L<subroutine|#Subroutine>, L<method|#Method>
+or a L<callable block|#Callable>.  As opposed to the L<#Parameter> that is
 specified in the definition of a subroutine/method/callable block.
 
     sub foo($bar) { say $bar }     # $bar is a parameter
@@ -124,16 +124,16 @@ L<Array|/type/Array> is a subclass of L<List|/type/List> that is mutable.
 This means you can e.g. C<.push> and C<.pop> on an array, whereas you cannot
 do that on a list.  This is separate from the type of elements in the array:
 if they are containers, then they are also mutable, but they don't have to
-be.  Arrays are typically recognizable by the L<@> L<sigil|Sigil>.
+be.  Arrays are typically recognizable by the L<#@> L<sigil|#Sigil>.
 
     my @array = 1,2,3;
     say @a;             # [1 2 3]
 
 =head1 Arity
 
-The number of L<positional|Positional> operands expected by an
-L<operator|Operator>, L<subroutine|Subroutine>, L<method|Method> or
-L<callable block|Callable>.
+The number of L<positional|#Positional> operands expected by an
+L<operator|#Operator>, L<subroutine|#Subroutine>, L<method|#Method> or
+L<callable block|#Callable>.
 
     sub infix:<+>(Foo $a, Foo $b) { $a.Int + $b.Int }  # arity of "+" is 2
     sub frobnicate($x) { ... }                         # arity of 1
@@ -141,15 +141,15 @@ L<callable block|Callable>.
     -> $key, $value { ... }                            # arity of 2
 
 The arity of a C<Callable> is one of the main selectors in
-L<multi-dispatch|Multi-Dispatch>.
+L<multi-dispatch|#Multi-Dispatch>.
 
 =head1 Attribute
 
 A per-object storage slot.  Other programming languages refer to this as
-L<Field>, L<Member>, L<Slot> or L<Property>.
+C<Field>, C<Member>, C<Slot> or C<Property>.
 
-In Perl 6, attributes are defined with the L<has> keyword inside a
-L<class|Class>:
+In Perl 6, attributes are defined with the L<#has> keyword inside a
+L<class|#Class>:
 
     class Dog {
         has $.name;    # public attribute "name"
@@ -213,7 +213,7 @@ with the appropriate sigil:
     :%mapper       # same as mapper => %mapper
     :&test         # same as test => &test
 
-See also L<Adverb>.
+See also L<#Adverb>.
 
 =head1 Constraint
 
@@ -229,7 +229,7 @@ The C<Str> in the above example is also a constraint, but is usually
 referred to as a "type constraint."
 
 Note that you can elso differentiate candidates in a
-L<multi-dispatch|Multi-Dispatch> by using a different constraint:
+L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
 
     multi sub abbreviate(Str $thing where { .chars >= 10 }) {
         "$thing.substr(0,10)..."
@@ -241,7 +241,7 @@ L<multi-dispatch|Multi-Dispatch> by using a different constraint:
 
 =head1 Field
 
-See L<Attribute>.
+See L<#Attribute>.
 
 =head1 Instance
 
@@ -278,7 +278,7 @@ C<#perl6> channel of C<irc.freenode.org>.
 
 =head1 IRC Lingo
 
-The following terms are often used on the Perl 6 related L<IRC> channels:
+The following terms are often used on the Perl 6 related L<#IRC> channels:
 
 =head2 AFAICS
 
@@ -307,20 +307,20 @@ know, and I don't care.
 
 =head2 backlog
 
-That part of a discussion on an L<IRC> channel that you've missed.  If it
+That part of a discussion on an L<#IRC> channel that you've missed.  If it
 is not or no longer available in your IRC client, you can go to sites such
 as L<http://irc.perl6.org> to see what has been logged for you.
 
 =head2 BIAB
 
-Back In A Bit.  As in, only L<afk|AFK> for a little while.
+Back In A Bit.  As in, only L<afk|#AFK> for a little while.
 
 =head2 Bot
 
-A program that does automatic tasks on one or more L<IRC> channels by
+A program that does automatic tasks on one or more L<#IRC> channels by
 acting like a regular user (as far as the IRC server is concerned) and
 performing some tasks that may involve answering to users requests.
-Examples are L<camelia>, L<dalek> and L<yoleaux>.
+Examples are L<#camelia>, L<#dalek> and L<#yoleaux>.
 
 =head2 BRB
 
@@ -409,8 +409,8 @@ No Such Thing
 
 =head2 Opt
 
-Short for "optimization", usually in either the context of L<spesh> or
-L<JIT>.
+Short for "optimization", usually in either the context of L<#spesh> or
+L<#JIT>.
 
 =head2 PB
 
@@ -441,11 +441,11 @@ Real Soon Now
 =head2 RT
 
 Request Tracker (L<http://rt.perl.org/>).  The place where all the bugs
-related to L<Rakudo> live.
+related to L<#Rakudo> live.
 
 =head2 TIMTOWTDI
 
-An alternative form of L<TMTOWTDI>, explicitly including the "is" from
+An alternative form of L<#TMTOWTDI>, explicitly including the "is" from
 the contraction "There's".
 
 =head2 TMI
@@ -474,7 +474,7 @@ Wikipedia
 
 =head2 WW
 
-Short for C<wrong window>.  When on L<IRC>, someone types something in a
+Short for C<wrong window>.  When on L<#IRC>, someone types something in a
 channel that was intended for another channel, or for a private message.
 
 =head1 Invocant
@@ -523,7 +523,7 @@ Examples of things that are not lvalues:
     sub f { }; f();          # "normal" subs are not writable
     sub f($x) { $x = 3 };    # error - parameters are read-only by default
 
-These are typically called L<rvalues|rvalue>.
+These are typically called L<rvalues|#rvalue>.
 
 =head1 Mainline
 
@@ -542,25 +542,25 @@ pre-compiled file).
 
 =head1 Member
 
-See L<Attribute>.
+See L<#Attribute>.
 
 =head1 Parameter
 
 L<Parameter|/type/Parameter> is a class to define parameters to
-L<subroutines|Subroutine>, L<methods|Method> and a L<callable blocks|Callable>.
-As opposed to the L<arguments|Argument> you specify when calling a
-subroutine/method/callable block.
+L<subroutines|#Subroutine>, L<methods|#Method> and a
+L<callable blocks|#Callable>.  As opposed to the L<arguments|#Argument>
+you specify when calling a subroutine/method/callable block.
 
     sub foo($bar) { say $bar }     # $bar is a parameter
     foo(42);                       # 42 is an argument
 
 =head1 Property
 
-See L<Attribute>.
+See L<#Attribute>.
 
 =head1 Slot
 
-See L<Attribute>.
+See L<#Attribute>.
 
 =head1 Slurpy
 
