Another bunch of lemmas and stubs

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -182,13 +182,24 @@ values in the junction are True.
         say 'success';
     }
 
+=head1 Bool
+
 =head1 Callable
 
 =head1 Camelia
 
 =head1 camelia
 
+The L<#Bot> on the #perl6 L<#IRC> channel that evaluates code, eg:
+
+  [16:28:27]  <lizmat>  m: say "Hello world"
+  [16:28:28]  <+camelia>    rakudo-moar 812a48: OUTPUT«Hello world␤»
+
+This is a handy tool for showing people if the output is (un)expected.
+
 =head1 Class
+
+=head1 Code
 
 =head1 Colon Pair and Colon List
 
@@ -251,17 +262,39 @@ L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
 
 =head1 dalek
 
+The L<#Bot> on the #perl6 L<#IRC> channel that reports changes made to
+various Perl 6 related L<repositories|#Repository>.
+
+  [15:46:40] <+dalek> doc: 2819f25 | lizmat++ | doc/Language/glossary.pod:
+  [15:46:40] <+dalek> doc: Add stubs for stuff inside the glossary already
+  [15:46:40] <+dalek> doc: review: https://github.com/perl6/doc/commit/2819f250
+
+=head1 Damian Conway
+
+Original author of the L<#Exegesis> (among many other things).
+See also L<https://en.wikipedia.org/wiki/Damian_Conway>.
+
 =head1 Enum
 
 =head1 Exegesis
 
+A document originally written by L<#TheDamian>, in which he tried to explain
+the L<Apocalypses|#Apocalypse> to the common (wo)man.  Now only kept as an
+historical document for reference.  See also L<#Synopsis>.
+
 =head1 False
+
+The value representing logical C<False> of the L<#Bool> L<enum|#Enum>.
 
 =head1 Field
 
 See L<#Attribute>.
 
 =head1 Grammar
+
+=head1 handles
+
+=head1 Hash
 
 =head1 Instance
 
@@ -513,6 +546,11 @@ in Perl 6.  It is what C<self> refers to in a method.
 
 =head1 Junction
 
+=head1 Larry Wall
+
+L<Perl's|#Perl> benevolent dictator for life, among many other things.  See
+also L<https://en.wikipedia.org/wiki/Larry_Wall>.
+
 =head1 List
 
 =head1 Literal
@@ -580,6 +618,8 @@ See L<#Attribute>.
 
 =head1 Multi-Dispatch
 
+=head1 Operator
+
 =head1 Package
 
 =head1 Parameter
@@ -592,11 +632,30 @@ you specify when calling a subroutine/method/callable block.
     sub foo($bar) { say $bar }     # $bar is a parameter
     foo(42);                       # 42 is an argument
 
+=head1 perl
+
+Name of the Perl 5 executor.
+
+=head1 Perl
+
+The Perl programming language in its many forms.
+
+=head1 Perl Community
+
+=head1 PERL
+
+A way to describe L<Perl> as a language, considered to be improper by
+many in the L<#Perl Community>.
+
 =head1 Property
 
 See L<#Attribute>.
 
 =head1 Rakudo
+
+=head1 Repository
+
+=head1 roast
 
 =head1 Role
 
@@ -605,7 +664,19 @@ See L<#Attribute>.
 A value that can be used on the right hand side of an assignment.  See also
 L<#lvalue>.
 
+=head2 Scalar
+
 =head1 Sigil
+
+In Perl, the sigil is the first character of a variable name.  It must be
+either L<#$>, L<#@>, L<#%>, or L<#&> respectively for a L<scalar|#Scalar>,
+L<array|#Array>, L<hash|#Hash>, or L<code|#Code> variable.  See also
+L<#twigil> and L<#role>.  Also sigilled variables allow short conventions
+for L<variable interpolation#Variable Interpolation> in a double quoted
+string, or even L<postcircumfix|#Postcircumfix> L<expressions|#Expression>
+starting with such a variable.
+
+=head2 Sigilless Variable
 
 =head1 Slot
 
@@ -632,11 +703,43 @@ This can also be used to collect all possible named parameters in a call:
 
 =head1 Subroutine
 
+=head1 Symbol
+
 =head1 Synopsis
+
+The current human-readable description of the Perl 6 language.  Still in
+development.  Much more a community effort than the L<Apocalypses|#Apocalypse>
+and L<Exegeses|#Exegesis> were. The current state of the language is reflected
+by L<#roast>, its L<#test suite>, not the synopses where speculative material
+is not always so flagged or more recent additions have not been documented.
+This is even more true of material that has not been yet implemented.
+
+=head1 test suite
+
+=head1 Texas operator
+
+The ASCII variant of a non-ASCII Unicode L<operator|#Operator> or
+L<symbol|#Symbol>.  So described because "Everything's bigger in Texas."
+For instance, C<(elem)> corresponds to the C<∈> ("Is this an element of
+that set?") operator that comes from set theory.  Texas operators are a
+workaround to the problem that people don't know how to type Unicode yet.
+Culturally, while we encourage people to use the Unicode symbols in a
+vague sort of way, we do not disparage the use of the ASCII variants.
+Well, maybe just a little...
+
+=head1 TheDamian
+
+L<#IRC> screen name for L<#Damian Conway>, writer of the original
+L<Exegeses|#Exegesis>.
 
 =head1 TimToady
 
+L<#IRC> screen name for L<#Larry Wall>, creator of Perl. The name comes from
+the pronunciation of L<#TIMTOWTDI> as a word.
+
 =head1 True
+
+The value representing logical C<True> of the L<#Bool> L<enum|#Enum>.
 
 =head1 Twigil
 
@@ -667,14 +770,49 @@ languages:
     # perl6 -e 'my Int $a; sub f(Int $x) { $x + 1 }; f($a);'
     Invocant requires an instance, but a type object was passed
 
+=head1 Variable
+
 =head1 yoleaux
+
+The L<#Bot> on the #perl6 L<#IRC> channel that provides various services
+to people logged in.  Commands to yoleax (a pun on YOLO) start with a period.
+Some often used commands are:
+
+=head2 .tell
+
+Leave a message to another user who is currently not logged in.  The message
+will be relayed as soon as the user says anything on the channel.
+
+  .tell lizmat I've read the glossary
+
+=head2 .u
+
+Look up unicode codepoint information from either a codepoint, or the name
+of a codepoint.
+
+ [16:35:44]  <lizmat>   .u empty set
+ [16:35:45]  <yoleaux>  U+2205 EMPTY SET [Sm] (∅)
+ [16:36:29]  <lizmat>   .u ∅
+ [16:36:30]  <yoleaux>  U+2205 EMPTY SET [Sm] (∅)
+
+Some L<#IRC> clients then easily allow you to copy/paste the codepoint in
+question, which can be sometimes be easier than other unicode codepoint
+input methods.
 
 =head1 $
 
+L<#Sigil> for L<scalar|#Scalar> L<variables|#Variable>.
+
 =head1 @
+
+L<#Sigil> for L<array|#Array> L<variables|#Variable>.
 
 =head1 %
 
+L<#Sigil> for L<hash|#Hash> L<variables|#Variable>.
+
 =head1 &
+
+L<#Sigil> for L<code|#Code> L<variables|#Variable>.
 
 =end pod
