--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -281,7 +281,7 @@ If you want to do it anyway, you can abuse autothreading for that:
 
 =head2 If Str is immutable, how does C<s///> work? if Int is immutable, how does C<$i++> work?
 
-In Perl 6, many basic types are immutable, but the variables holding them are
+In Perl 6, values of many basic types are immutable, but the variables holding them are
 not. The C<s///> operator works on a variable, into which it puts a newly
 created string object. Likewise C<$i++> works on the C<$i> variable, not
 just on the value in it.
