Use macron instead of minus

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -30,7 +30,7 @@ if it is different from C<6.c>.
     ｢        U+FF62      "                   as part of ｢｣
     ｣        U+FF63      "                   as part of ｢｣
 
-    ⁻        U+00AF      **-                 as part of exponentiation
+    ¯        U+00AF      **-                 as part of exponentiation
     ⁺        U+207A      **+                 as part of exponentiation
     ⁻        U+207B      **-                 as part of exponentiation
     ⁰        U+2070      **0                 can be combined with ⁰..⁹
