Get better index placement

--- a/Language/contributors.pod
+++ b/Language/contributors.pod
@@ -1,8 +1,8 @@
 =begin pod
 
-=TITLE List of Contributors
+=TITLE Contributors
 
-=SUBTITLE Contributors to Perl 6 over the years
+=SUBTITLE List of contributors to Perl 6 over the years
 
 The following people contributed to the development of Perl 6, as could be
 determined from the logs of all the various projects that make up Perl 6.
