Add lemma for Pull Request
And fix the link from the list of contributors

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -478,8 +478,7 @@ when programming Perl 5.
 
 =head2 PR
 
-Pull Request.  A feature of L<https://gitub.com|Github> that allows you to
-make patches to be easily applied using the Github user interface.
+See L<#Pull Request>.
 
 =head2 P5
 
@@ -650,6 +649,11 @@ many in the L<#Perl Community>.
 =head1 Property
 
 See L<#Attribute>.
+
+=head1 Pull Request
+
+A feature of L<https://gitub.com|Github> that allows you to make patches
+to be easily applied using the Github user interface.
 
 =head1 Rakudo
 
