--- a/Language/contributors.pod
+++ b/Language/contributors.pod
@@ -8,7 +8,7 @@ The following people contributed to the development of Perl 6, as could be
 determined from the logs of all the various projects that make up Perl 6.
 If you think you are missing from this list, or for any reason would not
 like to appear on this list, or need a correction, please submit a
-L<Pull Request|/language/glossary/Pull_Request> with the required change(s).
+L<Pull Request|/language/glossary#Pull_Request> with the required change(s).
 
 =head1 A
 
