Lemmas from docs/glossary.pod

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -20,6 +20,13 @@ implemented using L<roles|#Role> with L<stubbed|#Stub> methods.
 
 =head1 Actions
 
+Action methods are typically used to perform transformations and
+other actions while parsing a source code program.  Parse grammars
+typically use the special token C< {*} > to indicate the point
+at which an action method is to be invoked.  In addition, a line
+containing C< {*} > may also use C< #= > to specify a "key" that
+is to be passed to the action method.
+
 =head1 Advent Calendar
 
 In the context of Perl 6, a yearly set of blog posts for each day from
@@ -617,6 +624,19 @@ See L<#Attribute>.
 
 =head1 Multi-Dispatch
 
+=head1 Not Quite Perl
+
+See L<#NQP>.
+
+=head1 NQP
+
+NQP is a primitive language for writing subroutines and methods using a
+subset of the Perl 6 syntax.  It's not intended to be a full-fledged
+programming language, nor does it provide a runtime environment beyond
+the basic VM primitives.  Compilers (such as L<#Rakudo> typically use
+NQP to compile L<action methods|#Actions> that convert a parse tree
+into its equivalent L<abstract syntax tree|#AST> representation.
+
 =head1 Operator
 
 =head1 Package
@@ -656,6 +676,11 @@ A feature of L<https://gitub.com|Github> that allows you to make patches
 to be easily applied using the Github user interface.
 
 =head1 Rakudo
+
+Rakudo is the name of a Perl 6 implementation that runs on L<#MoarVM> and
+the L<#JVM>.  It is an abbreviation of "Rakuda-do," which, when translated
+from Japanese, means "The Way of the Camel".  Also, in Japanese, "Rakudo"
+means "Paradise."
 
 =head1 Repository
 
@@ -702,6 +727,13 @@ This can also be used to collect all possible named parameters in a call:
     allnameds a => 42, :666b, :c<foo>;  # a => 42, b => 666, c => foo
 
 =head1 Spesh
+
+=head1 STD
+
+STD.pm is the "standard" Perl 6 grammar definition, see
+L<https://github.com/perl6/std/> that was used to implement Perl 6.
+STD.pm is no longer really a "specification" in a proscriptive sense:
+it's more of a guideline or model for Perl 6 implementations to follow.
 
 =head1 Stub
 
