--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -27,8 +27,8 @@ if it is different from C<6.c>.
     “        U+201C      "                   as part of “” or „” or ”“
     ”        U+201D      "                   as part of ”“ or ””
     „        U+201E      "                   as part of „“ or „”
-    ｢        U+FF62      "                   as part of ｢｣
-    ｣        U+FF63      "                   as part of ｢｣
+    ｢        U+FF62      Q//                 as part of ｢｣
+    ｣        U+FF63      Q//                 as part of ｢｣
 
     ¯        U+00AF      **-                 as part of exponentiation
     ⁺        U+207A      **+                 as part of exponentiation
