doc casting a Hash or Pair into named arguments (sammers++)

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -276,7 +276,24 @@ variable name:
 Aliases are also possible that way:
 
     sub paint( :color(:colour($c)) ) { }    # 'color' and 'colour' are both OK
-    sub paint( :color(:$colour) ) { }      # same API for the caller
+    sub paint( :color(:$colour) ) { }       # same API for the caller
+
+A function with named parameters can be called dynamically, dereferencing it
+with C<|>.
+
+	multi f(:$named){ note &?ROUTINE.signature }; 
+	multi f(:$also-named){ note &?ROUTINE.signature }; 
+	for 'named', 'also-named' -> $n { 
+		f(|($n => rand))                    # «(:$named)␤(:$also-named)␤»
+	}
+
+	my $pair = :named(1); 
+	f |$pair;                               # «(:$named)␤»
+
+The same can be used to convert a Hash into named parameters.
+
+	my %pairs = also-named => 4; 
+	f |%pairs;                              # «(:$also-named)␤»
 
 =head2 Optional and Mandatory Parameters
 
