better wording for casting a Pair into named arguments

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -278,8 +278,8 @@ Aliases are also possible that way:
     sub paint( :color(:colour($c)) ) { }    # 'color' and 'colour' are both OK
     sub paint( :color(:$colour) ) { }       # same API for the caller
 
-A function with named parameters can be called dynamically, dereferencing it
-with C<|>.
+A function with named arguments can be called dynamically, dereferencing a
+Pair with C<|> to turn it into a named argument.
 
 	multi f(:$named){ note &?ROUTINE.signature }; 
 	multi f(:$also-named){ note &?ROUTINE.signature }; 
@@ -290,7 +290,7 @@ with C<|>.
 	my $pair = :named(1); 
 	f |$pair;                               # «(:$named)␤»
 
-The same can be used to convert a Hash into named parameters.
+The same can be used to convert a Hash into named arguments.
 
 	my %pairs = also-named => 4; 
 	f |%pairs;                              # «(:$also-named)␤»
