doc --target=ast see http://irclog.perlgeek.de/perl6/search/?nick=&q=--target%3Dast

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -144,6 +144,11 @@ Nativecall etc.) rather like the linux kernel itself.
 Rakudo Star is a distribution of rakudo which ships with some useful modules
 and many more can be installed from the ecosystem.
 
+=head2 Is there something like B::Deparse/how can I get hold of the AST?
+
+Use C<perl6 --target=ast -e 'very-short-example()'> to get hold of the AST of a
+compilation unit.
+
 =head1 Language Features
 
 =head2 How can I dump Perl 6 data structures (like Perl 5 Data::Dumper and similar)?
